docs/versioned_docs/version-1.12.0/_partial-bundle-graduated-install.mdx
import Admonition from '@theme/Admonition';

export const GraduatedBundleInstall = ({ packageName }) => {
  const providers = {
    'amazon':             { name: 'Amazon Bedrock',  coreSupport: true,  inDefault: true  },
    'anthropic':          { name: 'Anthropic',       coreSupport: true,  inDefault: true  },
    'arxiv':              { name: 'arXiv Search',    coreSupport: false, inDefault: false },
    'azure':              { name: 'Azure AI Foundry', coreSupport: true,  inDefault: true  },
    'cohere':             { name: 'Cohere',          coreSupport: true,  inDefault: true  },
    'confluent':          { name: 'IBM Confluent',   coreSupport: false, inDefault: false },
    'datastax':           { name: 'DataStax',        coreSupport: false, inDefault: true  },
    'docling':            { name: 'Docling',         coreSupport: false, inDefault: true  },
    'duckduckgo':         { name: 'DuckDuckGo Search', coreSupport: false, inDefault: false },
    'empiriolabs':        { name: 'EmpirioLabs',     coreSupport: false, inDefault: false },
    'exa':                { name: 'Exa',             coreSupport: false, inDefault: false },
    'firecrawl':          { name: 'Firecrawl',       coreSupport: false, inDefault: false },
    'google':             { name: 'Google',          coreSupport: true,  inDefault: true  },
    'ibm':                { name: 'IBM',             coreSupport: true,  inDefault: true  },
    'nextplaid':          { name: 'NextPlaid',       coreSupport: false, inDefault: false },
    'ollama':             { name: 'Ollama',          coreSupport: true,  inDefault: true  },
    'openai':             { name: 'OpenAI',          coreSupport: true,  inDefault: true  },
    'openai-compatible':  { name: 'OpenAI Compatible', coreSupport: false, inDefault: true  },
    'oracle':             { name: 'Oracle',          coreSupport: false, inDefault: true  },
    'paddle':             { name: 'PaddleOCR',       coreSupport: false, inDefault: false },
    'valkey':             { name: 'Valkey',          coreSupport: false, inDefault: false },
    'vllm':               { name: 'vLLM',            coreSupport: false, inDefault: true  },
  };

  const { name, coreSupport, inDefault } = providers[packageName] ?? { name: packageName, coreSupport: false, inDefault: false };

  return (
    <Admonition type="tip">
      {coreSupport && (
        <p>
          Basic {name} support is available in all Langflow installations through the core <strong>Language Model</strong> component.
          This bundle adds an enhanced {name} component with additional provider-specific parameters.
        </p>
      )}
      {inDefault ? (
        <>
          <p>
            If you installed <code>lfx</code> directly (not as part of <code>langflow</code>), install the {name} bundle separately:
          </p>
          <ol>
            <li>Run <code>uv pip install lfx-{packageName}</code>.</li>
            <li>Restart Langflow.</li>
            <li>To confirm the bundle loaded, run <code>lfx extension list</code>.</li>
          </ol>
          <p>If you installed Langflow with <code>uv pip install langflow</code>, these bundle components are already included.</p>
        </>
      ) : (
        <>
          <p>
            This bundle is not included in the default <code>uv pip install langflow</code> install. Add it with:
          </p>
          <ol>
            <li>Run <code>uv pip install lfx-{packageName}</code>.</li>
            <li>Restart Langflow.</li>
            <li>To confirm the bundle loaded, run <code>lfx extension list</code>.</li>
          </ol>
          <p>
            To install every no-Torch opt-in provider at once, run <code>uv pip install "langflow[bundles]"</code>.
            For the full opt-in list, see <a href="/extensions-bundle-list#additional-bundles">Additional bundles</a>.
          </p>
        </>
      )}
      <p>For more information, see <a href="./lfx-install#install-with-bundle-components">Install LFX with bundle components</a>.</p>
    </Admonition>
  );
};
